# drf-blueprint

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
config/: asgi.py  settings.py  wsgi.py
configs/: asgi.py  settings.py  urls.py  wsgi.py
