[project]
name = "drf-blueprint"
version = "0.1.0"
description = "Django Rest Framework Blueprint"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.50",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
